--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -487,6 +487,10 @@
     "pleaseEnterCurrentPassword": "Vui lòng nhập mật khẩu hiện tại",
     "pleaseEnterNewPassword": "Vui lòng nhập mật khẩu mới",
     "passwordMinLength": "Mật khẩu phải có ít nhất 6 ký tự",
+    "passwordMustContainLowercase": "Mật khẩu phải chứa ít nhất một chữ cái thường",
+    "passwordMustContainUppercase": "Mật khẩu phải chứa ít nhất một chữ cái hoa",
+    "passwordMustContainNumber": "Mật khẩu phải chứa ít nhất một số",
+    "passwordMustContainSpecial": "Mật khẩu phải chứa ít nhất một ký tự đặc biệt",
     "pleaseConfirmNewPassword": "Vui lòng xác nhận mật khẩu mới",
     "contactMessages": "Tin nhắn liên hệ",
     "newMessages": "mới",
